services-page-done

--- a/about.html
+++ b/about.html
@@ -305,7 +305,7 @@
                                 </div>
                                 <div class="btn-wrapper mt--2">
                                     <div class="hero-btn mx-auto">
-                                        <a href="#" class="btn btn--primary">
+                                        <a href="tel:631-588-1345" class="btn btn--primary" target="_blank">
                                             <span class="d-flex">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="27.041" height="25" viewBox="0 0 27.041 24.868">
                                                     <g data-name="Group 1871">
@@ -390,7 +390,7 @@
         <!-- Licensed Section End -->
 
         <!-- Results Section Start -->
-          <section class="results mt--8 mt--lg--12 mt--xl-14 mt--xxl--16">
+          <section class="results mt--8 mt--lg--12 mt--xl--14 mt--xxl--16">
             <div class="page-container">
                 <div class="row">
                     <div class="col-lg-6 col-xxl-5 mx-auto txt-center">
@@ -410,7 +410,7 @@
         <!-- Results Section End -->
 
         <!-- Values Section Start -->
-         <section class="values mt--8 mt--lg--12 mt--xl-14 mt--xxl--16">
+         <section class="values mt--8 mt--lg--12 mt--xl--14 mt--xxl--16">
             <div class="page-container">
                 <div class="row">
                     <div class="col-lg-6 col-xxl-5 mx-auto txt-center">
@@ -487,7 +487,7 @@
         <!-- Values Section End -->
 
         <!-- Meet Section Start -->
-         <section class="meet mt--8 mt--lg--12 mt--xl-14 mt--xxl--16">
+         <section class="meet mt--8 mt--lg--12 mt--xl--14 mt--xxl--16">
             <div class="page-container">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
@@ -517,7 +517,7 @@
 
 
         <!--JOurney Section Start -->
-        <section class="journey mt--8 mt--lg--12 mt--xl-14 mt--xxl--16">
+        <section class="journey mt--8 mt--lg--12 mt--xl--14 mt--xxl--16">
             <div class="page-container">
                 <div class="row">
                     <div class="col-lg-6 col-xl-5 mx-auto txt-center">
@@ -541,7 +541,7 @@
 
 
     <!-- Footer Start -->
-    <footer class="footer mt--8 mt--xxl--12 bg-colored">
+    <footer class="footer mt--8 mt--xxl--10 bg-colored">
         <div class="footer__top py--4 py--sm--6 py--lg--8 py--xl--8 py--xxl--10">
             <div class="page-container">
                 <div class="row">
