custome-select-and-changes-design

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                                     <figure class="">
                                         <img src="./assets/icons/approved.svg" alt="insured" class="img-fluid">
                                     </figure>
-                                    <span>Zero-Waste Remodeling/span>
+                                    <span>Zero-Waste Remodeling</span>
                                 </div>
                             </div>
                             <div class="header-top__left">
@@ -374,7 +374,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 offset-md-1  col-xxl-4 offset-xxl-5 mt--1 d-none d-md-flex">
+                        <div class="col-md-6 offset-md-1  col-xxl-4 offset-xxl-5 mt--1 d-none d-md-flex justify-content-end">
                             <div class="ratings-wrapper">
                                 <div class="ratings-item">
                                     <figure class="">
@@ -904,7 +904,7 @@
         <div class="footer__bottom py--2 py--sm--3">
             <div class="page-container">
                 <div class="row">
-                    <div class="col-sm-5 col-xl-4">
+                    <div class="col-sm-5 col-xl-4 col-xxl-5">
                         <a href="./index.html" class="d-inline-flex">
                             <figure class="fade-in">
                                 <img src="./assets/logos/creative-design-white.svg" alt="Creative-Design's logo" class="img-fluid">                                  
@@ -915,11 +915,13 @@
                         </div>
                     </div>
 
-                    <div class="col-sm-7 col-xl-8">
+                    <div class="col-sm-7 col-xl-8 col-xxl-7">
                         <div class="row">
-                            <div class="col-xl-6 copyright-text-wrapper mt-1">
-                                <small class="fade-in-up"> &copy; 2024 creative design remodeling</small>
-                                <small class="fade-in-up mt-xl-1">Designed By Your Hustler</small>
+                            <div class="col-xl-6 copyright-text-wrapper">
+                               <div class="">
+                                    <small class="fade-in-up"> &copy; 2024 creative design remodeling</small>
+                                    <small class="fade-in-up mt-xl-1">Designed By Your Hustler</small>
+                               </div>
                             </div>                   
                             <div class="col-lg-6 d-none d-xl-block">
                                 <ul class="sitemap-list list-none">
