--- a/services/kitchen-remodeling.html
+++ b/services/kitchen-remodeling.html
@@ -41,7 +41,7 @@
                                     <figure class="">
                                         <img src="../assets/icons/approved.svg" alt="insured" class="img-fluid">
                                     </figure>
-                                    <span>Zero-Waste Remodeling/span>
+                                    <span>Zero-Waste Remodeling</span>
                                 </div>
                             </div>
                             <div class="header-top__left">
@@ -368,7 +368,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 col-xxl-4 offset-md-4 offset-xxl-5 mt--1 d-none d-md-flex">
+                        <div class="col-md-4 col-xxl-4 offset-md-4 offset-xxl-5 mt--1 d-none d-md-flex justify-content-end">
                             <div class="ratings-wrapper">
                                 <div class="ratings-item">
                                     <figure class="">
@@ -947,16 +947,16 @@
                                 </div>
 
 
-                                <div class="form__group-wrapper mb-4 fade-in-up">
-                                    <div class="field-icon pr--1"></div>
-                                    <div class="form__group">
-                                        <input type="text" name="service" class="form__control"  placeholder="" required>
-                                        <label for="service" class="form__label">Service</label>                     
-                                    </div>
-                                    <div class="field-icon pr--2">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="12" viewBox="0 0 25 10">
-                                            <path data-name="Polygon 1" d="M12.5 0 25 10H0z" transform="rotate(-180 12.5 5)" fill="#1e1e1e"/>
-                                        </svg>                                        
+                                <div class="form__group-wrapper mb-4 fade-in-up p-0">
+                                    <div class="custom-select">
+                                        <select class="select-box" name="services" id="services" required>
+                                            <option selected disabled>Service</option>
+                                            <option value="kithen remodeling">Kitchen Remodeling</option>
+                                            <option value="bathroom remodeling">Bathroom Remodeling</option>
+                                            <option value="home remodeling">Full Home Remodeling</option>
+                                            <option value="flooring installation">Flooring Installation</option>
+                                            <option value="door-and-kithchen installation">Door & Window Installation</option>
+                                        </select>
                                     </div>
                                 </div>
 
@@ -1187,7 +1187,7 @@
         <div class="footer__bottom py--2 py--sm--3">
             <div class="page-container">
                 <div class="row">
-                    <div class="col-sm-5 col-xl-4">
+                    <div class="col-sm-5 col-xl-4 col-xxl-5">
                         <a href="../index.html" class="d-inline-flex">
                             <figure class="fade-in">
                                 <img src="../assets/logos/creative-design-white.svg" alt="Creative-Design's logo" class="img-fluid">                                  
@@ -1198,11 +1198,13 @@
                         </div>
                     </div>
 
-                    <div class="col-sm-7 col-xl-8">
+                    <div class="col-sm-7 col-xl-8 col-xxl-7">
                         <div class="row">
-                            <div class="col-xl-6 copyright-text-wrapper mt-1">
-                                <small class="fade-in-up"> &copy; 2024 creative design remodeling</small>
-                                <small class="fade-in-up mt-xl-1">Designed By Your Hustler</small>
+                            <div class="col-xl-6 copyright-text-wrapper">
+                               <div class="">
+                                    <small class="fade-in-up"> &copy; 2024 creative design remodeling</small>
+                                    <small class="fade-in-up mt-xl-1">Designed By Your Hustler</small>
+                               </div>
                             </div>                   
                             <div class="col-lg-6 d-none d-xl-block">
                                 <ul class="sitemap-list list-none">
